fixing spacing and animation issues

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ header .courier {
   .appear-left {
     border-radius: 10%;
     opacity: 0;
-    transform: translateX(-10em);
+    transform: translateX(-2em);
     transition: transform 4s 0.25s cubic-bezier(0, 1, 0.3, 1), opacity 0.3s 0.25s ease-out;
     will-change: transform, opacity;
   }
@@ -98,7 +98,7 @@ header .courier {
   .appear-right {
     border-radius: 10%;
     opacity: 0;
-    transform: translateX(8em);
+    transform: translateX(2em);
     transition: transform 4s 0.25s cubic-bezier(0, 1, 0.3, 1), opacity 0.3s 0.25s ease-out;
     will-change: transform, opacity;
   }
@@ -152,6 +152,10 @@ header .courier {
   background-color: white;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.about-me-dev {
+  padding-top: 20px;
 }
 
 .pic-prop {
@@ -294,14 +298,6 @@ header .courier {
 .project-1, .project-2, .project-3 {
   margin: 20px;
   opacity: 0;
-  transform: translateX(-10em) rotateY(180deg);
-  transition: transform 1s 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s 0.25s ease-in;
-  will-change: transform, opacity;
-}
-
-.project-4 {
-  opacity: 0;
-  transform: translateX(-10em) rotate(360deg);
   transition: transform 1s 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s 0.25s ease-in;
   will-change: transform, opacity;
 }
@@ -333,18 +329,6 @@ header .courier {
 
   .project-1 {
     margin: 0px;
-  }
-
-  .project-2 {
-    margin: 0px;
-    transform: translateX(-50em) rotateY(180deg);
-    transition-delay: 0.5s;
-  }
-
-  .project-3 {
-    margin: 0px;
-    transform: translateX(-70em) rotateY(180deg);
-    transition-delay: 1s;
   }
 }
 .contact-form {
