--- a/scss/components/__aboutme.scss
+++ b/scss/components/__aboutme.scss
@@ -51,6 +51,10 @@
     padding-right: 10px;
 }
 
+.about-me-dev {
+    padding-top: 20px;
+}
+
 .pic-prop {
     padding: 10px;
     display: block;
