--- a/scss/components/__ani.scss
+++ b/scss/components/__ani.scss
@@ -22,7 +22,7 @@
     .appear-left {
         border-radius: 10%;
         opacity: 0;
-        transform: translateX(-10em);
+        transform: translateX(-2em);
         transition: transform 4s .25s cubic-bezier(0,1,.3,1),
                     opacity .3s .25s ease-out;
         will-change: transform, opacity;
@@ -31,7 +31,7 @@
     .appear-right {
         border-radius: 10%;
         opacity: 0;
-        transform: translateX(8em);
+        transform: translateX(2em);
         transition: transform 4s .25s cubic-bezier(0,1,.3,1),
                     opacity .3s .25s ease-out;
         will-change: transform, opacity;
